sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:4: error: '<-' expected but ')' found.
    for(j<1 to getValueCount()){
                              ^AlgSelectionSort:9: error: illegal start of simple expression
}
^